k8s/environments/hetzner/manifests/o11y-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: monitoring-httproute
spec:
  parentRefs:
    - name: cluster-gateway
  hostnames:
    - "monitoring.niovial.io"
  rules:
    - backendRefs:
        - name: vm-stack-grafana
          port: 3000
